--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://dev-ripper.github.io/ARTest/",
+  "homepage": "https://dev-ripper.github.io/ARTest/src",
   "name": "artest",
   "version": "0.1.0",
   "private": true,
